
	* Added feature #10181: htmlArea RTE: Move status bar to plugin
	* Added feature #10195: htmlArea RTE: Enable the RTE in Opera 9.62+
	* Added feature #10196: htmlArea RTE: Remove extension configuration variable enableClickEnlarge
	* Fixed bug #10197: htmlArea RTE: Missing XCLASS inclusion in class.tx_rtehtmlarea_pi1.php
	* Follow-up to #10181: htmlArea RTE: Move status bar to plugin

2009-01-18  Francois Suter  <francois@typo3.org>

	* Cleanup #10125: Replace deprecated function calls in sysext indexed_search (thanks to Markus Krause)

2009-01-16  Oliver Hader  <oliver@typo3.org>

	* Follow-up to bug #10094: Fixed typing error in t3lib_TCEmain::dbAnalysisStoreExec()

2009-01-16  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10167: Backend not usable in Internet Explorer anymore
	* Fixed bug #9307: Remove an obsolete check for disable_exec_function in filelist
	* Fixed bug #10157: t3lib/config_default.php textfile_ext should be updated to include xml and other text types
	* Fixed bug #9867: Adding T3_SERVICES to configuration modul

2009-01-16  Bernhard Kraft  <kraftb@think-open.at>

	* Fixed bug #5497: Links in Task Center

2009-01-15  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10057: hide/unhide page causes error when done via the context menu
	* Fixed bug #8787: titles length in list module (thanks to Stefano Cecere)

2009-01-14  Jeff Segars <jeff@webempoweredchurch.org>

	* Fixed bug #10064: config.admPanel has no effect (thanks to Ralf Hettinger)
	* Fixed bug #10105: htmlArea RTE: Cannot load multiple RTEs via AJAX

2009-01-14  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #10138: htmlArea RTE: add Clear RTE cache option to BE Clear cache menu
	* Fixed bug #10140: htmlArea RTE: Alignment of td's and th's in out-of-the-box installation

2009-01-14  Steffen Kamper  <info@sk-typo3.de>
