@@ -5,6 +5,7 @@
 	* Added feature #10196: htmlArea RTE: Remove extension configuration variable enableClickEnlarge
 	* Fixed bug #10197: htmlArea RTE: Missing XCLASS inclusion in class.tx_rtehtmlarea_pi1.php
 	* Follow-up to #10181: htmlArea RTE: Move status bar to plugin
+	* Fixed bug #9935: htmlArea RTE: enableWordClean on paste does not work when hidden button is not in toolbar
 
 2009-01-14  Stanislas Rolland  <typo3@sjbr.ca>
 
